--- a/styles/portfulio.css
+++ b/styles/portfulio.css
@@ -6,6 +6,12 @@ body {
     font-family: 'Lato', sans-serif;
     font-family: 'Open Sans', sans-serif;
     font-family: 'Poppins', sans-serif;
+
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
     }
 
 .head{
@@ -72,7 +78,7 @@ body {
 .banner-area{
     background-image: url(../img/Vectorrr.png);
     
-    height: 500px;
+    height: 600px;
      background-size: cover;
      background-repeat: no-repeat;
      /* margin-left: 250px; */
@@ -100,10 +106,131 @@ background-color: rgb(27, 12, 12)  #070211 0%,;
     width: 600px;
 margin-left: 200px;
 
+
 }
-.button{
+/* .button {
     background-color: #FD6F00;
-    margin-left: 200px;
+   margin: auto;
     margin-top: 10px;
     padding: 5px;
+    
+} */
+
+
+ .button{
+    margin:0px 500px 0px 200px; 
+    
+}
+.button a{
+    text-decoration: none;
+}
+
+/* shedul section */
+
+ .shedul-section{
+   
+    width: 800px;
+    height: 400px;
+    margin: 25px auto; 
+    background-color: #FFEDED;
+    text-align: center;
+   text-transform: lowercase;
+   
+ }
+ .text{
+   padding-top: 100px;
+ }
+ span{
+    color: #F00;
+ }
+ .nam{
+    text-transform: uppercase;
+    color:#F00;
+ }
+ 
+ .btn{
+     margin: 5px auto;
+    background-color: #F00;
+    padding: 5px;
+ }
+
+/* new best offer section start */
+.best-offer-section{
+    display: flex;
+    width: 800px;
+    height: 400px;
+    margin: 20px auto;
+    background-color: #FFEDED;
+}
+.new-offer{
+    margin-top: 70px;
+}
+.new-offer p{
+    color: #F00;
+    font-size: 15px;
+    padding: 5px;
+}
+.new-offer h4{
+    color: #070211;
+    font-family: Merriweather;
+    font-size: 25px;
+    font-weight: 600;
+    width: 150px;
+ 
+}
+.second-offer {
+    border-radius: 220px;
+    border: 10px solid #F00;
+}
+.imges {
+    padding: 5px; 
+} 
+small{
+     color: rgba(7, 2, 17, 0.60);
+font-size: 15px;
+font-weight: 400;
+
+}
+.third-offer {
+      margin:70px 10px;
+}
+.third-offer h4{
+
+color: #F00;
+font-size: 25px;
+font-weight: 600;
+
+}
+.photo{
+    width: 70px;
+height: 70px;
+flex-shrink: 0;
+}
+
+/* WHAT IS FUNCTIONAL section start */
+
+.sale-section{
+    text-align: center;
+    margin: auto;
+    width: 800px;
+    height: 400px;
+    background-image: url(../img/Rectangle\ 1.png);
+    background-repeat: no-repeat;
+    background-position: center;
+     background-position-x: bottom;
+     background-color: floralwhite;
+
+}
+.text-title{
+    width:100px ;
+    height: 50px;
+   
+}
+span{
+    color: #F00;
+}
+.Rectangle{
+    margin-top: 250px;
+    width: 800px;
+    height: 90px;
 }
